// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplainCollectionInterval collection interval setting updates should show a success message while updated = true 1`] = `
<ExplainCollectionInterval
  enabler={
    Object {
      "enableCollectionInterval": [Function],
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  isCollectionIntervalUpdated={true}
  isCollectionIntervalUpdating={false}
  reason={
    Object {
      "context": "cluster",
      "data": "-1",
      "property": "xpack.monitoring.collection.interval",
    }
  }
>
  <EuiTitle
    size="l"
  >
    <h2
      className="euiTitle euiTitle--large"
    >
      <FormattedMessage
        defaultMessage="Success! Wait a moment please."
        id="xpack.monitoring.noData.explanations.collectionInterval.monitoringTurnedOnTitle"
        values={Object {}}
      >
        Success! Wait a moment please.
      </FormattedMessage>
    </h2>
  </EuiTitle>
  <EuiHorizontalRule
    size="half"
  >
    <hr
      className="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
    />
  </EuiHorizontalRule>
  <EuiText>
    <div
      className="euiText euiText--medium"
    >
      <p>
        <FormattedMessage
          defaultMessage="As soon as monitoring data appears in your cluster the page will automatically refresh with your monitoring dashboard. This only takes only a few seconds."
          id="xpack.monitoring.noData.explanations.collectionInterval.monitoringTurnedOnDescription"
          values={Object {}}
        >
          As soon as monitoring data appears in your cluster the page will automatically refresh with your monitoring dashboard. This only takes only a few seconds.
        </FormattedMessage>
      </p>
    </div>
  </EuiText>
  <EuiSpacer>
    <div
      className="euiSpacer euiSpacer--l"
    />
  </EuiSpacer>
  <EuiLoadingSpinner
    size="l"
  >
    <span
      className="euiLoadingSpinner euiLoadingSpinner--large"
    />
  </EuiLoadingSpinner>
</ExplainCollectionInterval>
`;

exports[`ExplainCollectionInterval collection interval setting updates should show a waiting indicator while updating = true 1`] = `
<ExplainCollectionInterval
  enabler={
    Object {
      "enableCollectionInterval": [Function],
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  isCollectionIntervalUpdated={false}
  isCollectionIntervalUpdating={true}
  reason={
    Object {
      "context": "cluster",
      "data": "-1",
      "property": "xpack.monitoring.collection.interval",
    }
  }
>
  <WhatIs>
    <EuiTitle
      size="l"
    >
      <h2
        className="euiTitle euiTitle--large"
      >
        <FormattedMessage
          defaultMessage="Monitoring is currently off"
          id="xpack.monitoring.noData.blurbs.monitoringIsOffTitle"
          values={Object {}}
        >
          Monitoring is currently off
        </FormattedMessage>
      </h2>
    </EuiTitle>
    <EuiTextColor
      color="subdued"
    >
      <span
        className="euiTextColor euiTextColor--subdued"
      >
        <EuiText>
          <div
            className="euiText euiText--medium"
          >
            <p>
              <FormattedMessage
                defaultMessage="Monitoring provides insight to your hardware performance and load."
                id="xpack.monitoring.noData.blurbs.monitoringIsOffDescription"
                values={Object {}}
              >
                Monitoring provides insight to your hardware performance and load.
              </FormattedMessage>
            </p>
          </div>
        </EuiText>
      </span>
    </EuiTextColor>
  </WhatIs>
  <EuiHorizontalRule
    size="half"
  >
    <hr
      className="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
    />
  </EuiHorizontalRule>
  <EuiText>
    <div
      className="euiText euiText--medium"
    >
      <p>
        <FormattedMessage
          defaultMessage="We checked the {context} settings and found that {property} is set to {data}."
          id="xpack.monitoring.noData.explanations.collectionIntervalDescription"
          values={
            Object {
              "context": "cluster",
              "data": <EuiCode>
                -1
              </EuiCode>,
              "property": <EuiCode>
                xpack.monitoring.collection.interval
              </EuiCode>,
            }
          }
        >
          We checked the cluster settings and found that 
          <EuiCode>
            <EuiCodeBlockImpl
              inline={true}
            >
              <span>
                <code>
                  xpack.monitoring.collection.interval
                </code>
              </span>
            </EuiCodeBlockImpl>
          </EuiCode>
           is set to 
          <EuiCode>
            <EuiCodeBlockImpl
              inline={true}
            >
              <span>
                <code>
                  -1
                </code>
              </span>
            </EuiCodeBlockImpl>
          </EuiCode>
          .
        </FormattedMessage>
      </p>
      <p>
        <FormattedMessage
          defaultMessage="The collection interval setting needs to be a positive integer (10s is recommended) in order for the collection agents to be active."
          id="xpack.monitoring.noData.explanations.collectionInterval.wrongIntervalValueDescription"
          values={Object {}}
        >
          The collection interval setting needs to be a positive integer (10s is recommended) in order for the collection agents to be active.
        </FormattedMessage>
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Would you like us to change it and enable monitoring?"
          id="xpack.monitoring.noData.explanations.collectionInterval.changeIntervalDescription"
          values={Object {}}
        >
          Would you like us to change it and enable monitoring?
        </FormattedMessage>
      </p>
    </div>
  </EuiText>
  <EuiSpacer>
    <div
      className="euiSpacer euiSpacer--l"
    />
  </EuiSpacer>
  <EuiFlexGroup
    alignItems="center"
    gutterSize="s"
    justifyContent="spaceAround"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <EuiFlexItem
        grow={false}
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <EuiButton
            data-test-subj="enableCollectionInterval"
            fill={true}
            isLoading={true}
            onClick={[Function]}
            type="button"
          >
            <button
              className="euiButton euiButton--primary euiButton--fill"
              data-test-subj="enableCollectionInterval"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiButton__content"
              >
                <EuiLoadingSpinner
                  className="euiButton__spinner"
                  size="m"
                >
                  <span
                    className="euiLoadingSpinner euiLoadingSpinner--medium euiButton__spinner"
                  />
                </EuiLoadingSpinner>
                <span
                  className="euiButton__text"
                >
                  <FormattedMessage
                    defaultMessage="Turn on monitoring"
                    id="xpack.monitoring.noData.explanations.collectionInterval.turnOnMonitoringButtonLabel"
                    values={Object {}}
                  >
                    Turn on monitoring
                  </FormattedMessage>
                </span>
              </span>
            </button>
          </EuiButton>
        </div>
      </EuiFlexItem>
    </div>
  </EuiFlexGroup>
</ExplainCollectionInterval>
`;

exports[`ExplainCollectionInterval should explain about xpack.monitoring.collection.interval setting 1`] = `
<ExplainCollectionInterval
  enabler={
    Object {
      "enableCollectionInterval": [Function],
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  isCollectionIntervalUpdated={false}
  isCollectionIntervalUpdating={false}
  reason={
    Object {
      "context": "cluster",
      "data": "-1",
      "property": "xpack.monitoring.collection.interval",
    }
  }
>
  <WhatIs>
    <EuiTitle
      size="l"
    >
      <h2
        className="euiTitle euiTitle--large"
      >
        <FormattedMessage
          defaultMessage="Monitoring is currently off"
          id="xpack.monitoring.noData.blurbs.monitoringIsOffTitle"
          values={Object {}}
        >
          Monitoring is currently off
        </FormattedMessage>
      </h2>
    </EuiTitle>
    <EuiTextColor
      color="subdued"
    >
      <span
        className="euiTextColor euiTextColor--subdued"
      >
        <EuiText>
          <div
            className="euiText euiText--medium"
          >
            <p>
              <FormattedMessage
                defaultMessage="Monitoring provides insight to your hardware performance and load."
                id="xpack.monitoring.noData.blurbs.monitoringIsOffDescription"
                values={Object {}}
              >
                Monitoring provides insight to your hardware performance and load.
              </FormattedMessage>
            </p>
          </div>
        </EuiText>
      </span>
    </EuiTextColor>
  </WhatIs>
  <EuiHorizontalRule
    size="half"
  >
    <hr
      className="euiHorizontalRule euiHorizontalRule--half euiHorizontalRule--marginLarge"
    />
  </EuiHorizontalRule>
  <EuiText>
    <div
      className="euiText euiText--medium"
    >
      <p>
        <FormattedMessage
          defaultMessage="We checked the {context} settings and found that {property} is set to {data}."
          id="xpack.monitoring.noData.explanations.collectionIntervalDescription"
          values={
            Object {
              "context": "cluster",
              "data": <EuiCode>
                -1
              </EuiCode>,
              "property": <EuiCode>
                xpack.monitoring.collection.interval
              </EuiCode>,
            }
          }
        >
          We checked the cluster settings and found that 
          <EuiCode>
            <EuiCodeBlockImpl
              inline={true}
            >
              <span>
                <code>
                  xpack.monitoring.collection.interval
                </code>
              </span>
            </EuiCodeBlockImpl>
          </EuiCode>
           is set to 
          <EuiCode>
            <EuiCodeBlockImpl
              inline={true}
            >
              <span>
                <code>
                  -1
                </code>
              </span>
            </EuiCodeBlockImpl>
          </EuiCode>
          .
        </FormattedMessage>
      </p>
      <p>
        <FormattedMessage
          defaultMessage="The collection interval setting needs to be a positive integer (10s is recommended) in order for the collection agents to be active."
          id="xpack.monitoring.noData.explanations.collectionInterval.wrongIntervalValueDescription"
          values={Object {}}
        >
          The collection interval setting needs to be a positive integer (10s is recommended) in order for the collection agents to be active.
        </FormattedMessage>
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Would you like us to change it and enable monitoring?"
          id="xpack.monitoring.noData.explanations.collectionInterval.changeIntervalDescription"
          values={Object {}}
        >
          Would you like us to change it and enable monitoring?
        </FormattedMessage>
      </p>
    </div>
  </EuiText>
  <EuiSpacer>
    <div
      className="euiSpacer euiSpacer--l"
    />
  </EuiSpacer>
  <EuiFlexGroup
    alignItems="center"
    gutterSize="s"
    justifyContent="spaceAround"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceAround euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <EuiFlexItem
        grow={false}
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <EuiButton
            data-test-subj="enableCollectionInterval"
            fill={true}
            isLoading={false}
            onClick={[Function]}
            type="button"
          >
            <button
              className="euiButton euiButton--primary euiButton--fill"
              data-test-subj="enableCollectionInterval"
              onClick={[Function]}
              type="button"
            >
              <span
                className="euiButton__content"
              >
                <span
                  className="euiButton__text"
                >
                  <FormattedMessage
                    defaultMessage="Turn on monitoring"
                    id="xpack.monitoring.noData.explanations.collectionInterval.turnOnMonitoringButtonLabel"
                    values={Object {}}
                  >
                    Turn on monitoring
                  </FormattedMessage>
                </span>
              </span>
            </button>
          </EuiButton>
        </div>
      </EuiFlexItem>
    </div>
  </EuiFlexGroup>
</ExplainCollectionInterval>
`;
